--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
+            type="com.watermelon.moviesapp.ui.home.HomeInteractionListener" />
     </data>
 
 
