--- a/app/src/main/res/layout/item_seasons.xml
+++ b/app/src/main/res/layout/item_seasons.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
+            type="com.watermelon.moviesapp.ui.home.HomeInteractionListener" />
     </data>
 
         <androidx.constraintlayout.widget.ConstraintLayout
