--- a/app/src/main/res/layout/item__movies.xml
+++ b/app/src/main/res/layout/item__movies.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
+            type="com.watermelon.moviesapp.ui.home.HomeInteractionListener" />
 
     </data>
 
@@ -19,6 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:onClick="@{()->listener.onItemClicked(item.id)}"
+
         >
 
         <com.google.android.material.imageview.ShapeableImageView
