fix: crush in fragment categories display and change item used

--- a/app/src/main/res/layout/item_categories_display.xml
+++ b/app/src/main/res/layout/item_categories_display.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.popular.PopularInteractionListener" />
+            type="com.watermelon.moviesapp.ui.categories.categoriesdisplay.CategoriesDisplayInteractionListener" />
 
     </data>
 
