--- a/app/src/main/res/layout/fragment_categories_display.xml
+++ b/app/src/main/res/layout/fragment_categories_display.xml
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="@id/list_title"
             app:layout_constraintStart_toStartOf="@id/list_title"
             app:layout_constraintTop_toBottomOf="@id/list_title"
-            tools:listitem="@layout/item_search" />
+            tools:listitem="@layout/item_categories_display" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
