--- a/app/src/main/res/layout/item_categories.xml
+++ b/app/src/main/res/layout/item_categories.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="item"
             type="com.watermelon.moviesapp.model.response.genres.Genre" />
@@ -23,24 +24,24 @@
         android:backgroundTint="@color/white"
         app:cardCornerRadius="@dimen/margin16dp"
         app:cardElevation="8dp"
-        >
+        android:onClick="@{() -> listener.onItemClick(item.id)}">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> listener.onItemClick(item.id)}">
+            >
 
             <ImageView
                 android:id="@+id/item_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin4dp"
                 android:background="@color/white"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
-                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="@dimen/margin4dp"
-                />
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
 
             <TextView
                 android:id="@+id/item_name"
@@ -51,33 +52,10 @@
                 android:textColor="@color/primary_text_color"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/item_image"
                 app:layout_constraintStart_toEndOf="@id/item_image"
                 app:layout_constraintTop_toTopOf="@id/item_image"
-                app:layout_constraintBottom_toBottomOf="@id/item_image"
                 tools:text="Action" />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin2x"
-                android:padding="6dp"
-                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
-                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/item_image"
-                app:layout_constraintBottom_toBottomOf="@id/item_image"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="@dimen/margin4dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginEnd="@dimen/margin5x"
-                android:background="@color/background_color"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/item_image"
-                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
