fix: change image scale type

--- a/app/src/main/res/layout/item_categories_display.xml
+++ b/app/src/main/res/layout/item_categories_display.xml
@@ -51,7 +51,7 @@
                 android:layout_width="120dp"
                 android:layout_height="110dp"
                 android:elevation="@dimen/margin16dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 app:image="@{item.posterPath}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
