--- a/app/src/main/res/layout/item_famous_people.xml
+++ b/app/src/main/res/layout/item_famous_people.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.popular.PopularViewModel" />
+            type="com.watermelon.moviesapp.ui.famous.FamousViewModel" />
 
     </data>
 
