--- a/app/src/main/res/layout/fragment_famous.xml
+++ b/app/src/main/res/layout/fragment_famous.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.ui.popular.PopularViewModel" />
+            type="com.watermelon.moviesapp.ui.famous.FamousViewModel" />
 
 
     </data>
@@ -15,7 +15,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <TextView
             android:id="@+id/list_title"
@@ -31,18 +30,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin2x"
-            android:background="@drawable/shape_arrow"
-            android:padding="6dp"
-            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
-            app:layout_constraintBottom_toBottomOf="@id/list_title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/list_title"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/popular_recycler_display"
             android:layout_width="0dp"
@@ -56,7 +43,6 @@
             app:layout_constraintStart_toStartOf="@id/list_title"
             app:layout_constraintTop_toBottomOf="@id/list_title"
             tools:listitem="@layout/item_categories_display" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
