--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,7 +108,7 @@
                 app:layout_constraintStart_toStartOf="@+id/popular_text"
                 app:layout_constraintTop_toBottomOf="@id/popular_text"
                 app:showWhenSuccess="@{viewModel.popularMovies}"
-                tools:listitem="@layout/item__movies" />
+                tools:listitem="@layout/item_movies" />
 
             <TextView
                 android:id="@+id/upcoming_text"
@@ -136,7 +136,7 @@
                 app:layout_constraintStart_toStartOf="@+id/upcoming_text"
                 app:layout_constraintTop_toBottomOf="@id/upcoming_text"
                 app:showWhenSuccess="@{viewModel.upcomingMovies}"
-                tools:listitem="@layout/item__movies" />
+                tools:listitem="@layout/item_movies" />
             <TextView
                 android:id="@+id/topRated_text"
                 android:layout_width="wrap_content"
@@ -164,7 +164,7 @@
                 app:layout_constraintStart_toStartOf="@+id/topRated_text"
                 app:layout_constraintTop_toBottomOf="@id/topRated_text"
                 app:showWhenSuccess="@{viewModel.topRatedMovies}"
-                tools:listitem="@layout/item__movies" />
+                tools:listitem="@layout/item_movies" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
