--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,8 +10,11 @@
         <item name="colorSecondary">@color/secondary_text_color</item>
         <item name="colorSecondaryVariant">@color/secondary_text_color</item>
         <item name="colorOnSecondary">@color/secondary_text_color</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@color/background_color</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
