--- a/app/src/main/res/layout/fragment_details_tv.xml
+++ b/app/src/main/res/layout/fragment_details_tv.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.ui.detailsTv.about.DetailsTvViewModel" />
+            type="com.watermelon.moviesapp.ui.detailsTv.DetailsTvViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
