--- a/app/src/main/res/layout/fragment_more_details.xml
+++ b/app/src/main/res/layout/fragment_more_details.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.ui.detailsTv.about.DetailsTvViewModel" />
+            type="com.watermelon.moviesapp.ui.detailsTv.DetailsTvViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
