--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -9,7 +9,7 @@
             type="com.watermelon.moviesapp.model.response.credits.Cast" />
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.home.HomeInteractionListener" />
+            type="com.watermelon.moviesapp.ui.details.DetailsInteractionListener" />
     </data>
 
     <LinearLayout
