--- a/app/src/main/res/layout/item_production_companies_tv.xml
+++ b/app/src/main/res/layout/item_production_companies_tv.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="item"
             type="com.watermelon.moviesapp.model.response.tv.details.ProductionCompany" />
+
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.home.HomeInteractionListener" />
+            type="com.watermelon.moviesapp.ui.detailsTv.TvDetailsInteractionListener" />
     </data>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginHorizontal="@dimen/margin4dp"
-        >
+        android:orientation="vertical">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/item_cast"
@@ -34,16 +35,15 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            tools:text="@string/app_name"
-            android:singleLine="true"
-            android:lines="1"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin4dp"
             android:layout_marginHorizontal="@dimen/margin4dp"
+            android:layout_marginTop="@dimen/margin4dp"
+            android:lines="1"
+            android:singleLine="true"
             android:text="@{item.name}"
-            android:textSize="@dimen/text16sp"
             android:textColor="@color/primary_text_color"
-            />
+            android:textSize="@dimen/text16sp"
+            tools:text="@string/app_name" />
 
     </LinearLayout>
 
