--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -24,7 +24,7 @@
             android:layout_height="120dp"
             android:scaleType="centerCrop"
             android:onClick="@{() -> listener.onItemClicked(item.id)}"
-            app:imageCast="@{item.profilePath}"
+            app:image="@{item.profilePath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,8 +39,7 @@
             android:paddingTop="@dimen/margin2dp"
             android:layout_marginHorizontal="@dimen/margin4dp"
             android:text="@{item.name}"
-            android:textColor="@color/primary_text_color"
-            />
+            android:textColor="@color/primary_text_color" />
 
     </LinearLayout>
 
