--- a/app/src/main/res/layout/fragment_tv_shows_actor.xml
+++ b/app/src/main/res/layout/fragment_tv_shows_actor.xml
@@ -26,7 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:spanCount="3"
-            tools:listitem="@layout/item_tv" />
+            tools:listitem="@layout/item_tv_credits_actor" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
