--- a/app/src/main/res/layout/item_tv_actor.xml
+++ b/app/src/main/res/layout/item_tv_actor.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.tvCredits.Cast" />
+            type="com.watermelon.moviesapp.model.response.credits.Cast" />
         <variable
             name="listener"
             type="com.watermelon.moviesapp.ui.detailsTv.TvDetailsInteractionListener" />
