--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -72,6 +72,9 @@
         <action
             android:id="@+id/action_profileFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_detailsTvFragment"
+            app:destination="@id/detailsTvFragment" />
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
