--- a/app/src/main/res/layout/fragment_more_details.xml
+++ b/app/src/main/res/layout/fragment_more_details.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="@dimen/margin32dp"
+        android:background="@color/background_color"
+        android:paddingTop="@dimen/margin24dp"
         tools:context="com.watermelon.moviesapp.ui.detailsTv.about.AboutTvFragment">
 
         <LinearLayout
@@ -20,9 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="@dimen/margin16dp"
+            android:background="@drawable/shape_season"
+            android:paddingVertical="@dimen/margin14dp"
             android:paddingHorizontal="@dimen/margin16dp"
-            android:paddingVertical="@dimen/margin8dp"
+            android:layout_marginHorizontal="@dimen/margin16dp"
             app:isNotNull="@{viewModel.tvDetails.toData().nextEpisodeToAir.overview}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lineHeight="18dp"
-                android:padding="@dimen/padding16dp"
+                android:padding="@dimen/padding8dp"
                 android:text="@{viewModel.tvDetails.toData().nextEpisodeToAir.overview}"
                 android:textColor="@color/primary_text_color"
                 tools:text="The film centers on the love relationship among the band's bassist Haruki Nakayama, drummer Akihiko Kaji, and Akihiko's   roommate and ex-boyfriend Ugetsu Murata." />
@@ -66,8 +68,8 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding24dp"
-            android:layout_marginTop="@dimen/margin16dp"
+            android:layout_marginHorizontal="@dimen/padding16dp"
+            android:layout_marginTop="@dimen/margin24dp"
             android:text="Production Companies"
             android:textColor="@color/primary_text_color"
             android:textSize="@dimen/text20sp"
@@ -83,7 +85,7 @@
             android:layout_marginTop="@dimen/margin8dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/padding28dp"
+            android:paddingHorizontal="@dimen/padding24dp"
             app:items="@{viewModel.tvDetails.toData().productionCompanies}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
