--- a/app/src/main/res/drawable/ic_contact_friend_heart.xml
+++ b/app/src/main/res/drawable/ic_contact_friend_heart.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="840dp"
     android:height="592dp"
+    android:tint="@color/secondary_text_color"
     android:viewportWidth="840"
     android:viewportHeight="592">
   <path
