--- a/app/src/main/res/drawable/layout_shape.xml
+++ b/app/src/main/res/drawable/layout_shape.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <gradient
-    android:endColor="#EB000000"
+        android:endColor="#EB000000"
+        android:angle="270"
         android:centerColor="#B71C1C1C"
-        android:startColor="#12000000"
-        android:angle="270"/>
-    <corners android:radius="20dp"/>
+        android:startColor="#12000000" />
+
+    <corners android:radius="20dp" />
+
 </shape>
