--- a/app/src/main/res/layout/fragment_about_actor.xml
+++ b/app/src/main/res/layout/fragment_about_actor.xml
@@ -19,7 +19,7 @@
             android:layout_height="16dp"
             android:layout_marginStart="@dimen/margin16dp"
             android:layout_marginTop="24dp"
-            android:background="@drawable/ic_baseline_cake_24"
+            android:src="@drawable/ic_baseline_cake_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,7 +42,7 @@
             android:layout_width="20dp"
             android:layout_height="16dp"
             android:layout_marginTop="@dimen/margin16dp"
-            android:background="@drawable/ic_contact_friend_heart"
+            android:src="@drawable/ic_contact_friend_heart"
             app:layout_constraintStart_toStartOf="@+id/birth_icon"
             app:layout_constraintTop_toBottomOf="@+id/birth_icon" />
 
@@ -64,6 +64,7 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_marginTop="@dimen/margin16dp"
+            android:src="@drawable/bi_emoji_smile"
             app:showAliveOrNot="@{viewModel.person.toData().deathDay!= null? @drawable/ic_death_icon_png : @drawable/ic_baseline_sentiment_satisfied_alt_24}"
             app:layout_constraintStart_toStartOf="@+id/followers_icon"
             app:layout_constraintTop_toBottomOf="@+id/followers_icon" />
@@ -123,7 +124,9 @@
             android:maxLines="4"
             android:scrollbars="vertical"
             app:showMoreTextLines="@{viewModel.person.toData().biography}" />
-            </ScrollView>
+
+        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
