--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.details.DetailsViewModel" />
@@ -13,21 +14,7 @@
         android:id="@+id/main_constraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color" >
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/go_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin2x"
-            android:background="@drawable/shape_arrow"
-            android:padding="6dp"
-            android:elevation="4dp"
-            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
-
+        android:background="@color/background_color">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading"
@@ -56,18 +43,18 @@
             app:showWhenSuccess="@{viewModel.movieDetails}"
             tools:src="@tools:sample/avatars" />
 
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ScrollView
+                android:id="@+id/details_movie"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <ScrollView
-                    android:id="@+id/details_movie"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,8 +71,9 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:layout_marginHorizontal="@dimen/margin16dp"
                         android:gravity="center"
+                        app:isNotNull="@{viewModel.movieDetails.toData().voteAverage}"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -97,17 +85,18 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            tools:text="8.7"
-                            android:textSize="@dimen/text12sp"
                             android:textColor="@color/primary_text_color"
-                            android:textStyle="bold" />
+                            android:textSize="@dimen/text12sp"
+                            android:text="@{viewModel.movieDetails.toData().voteAverage.toString()}"
+                            android:textStyle="bold"
+                            tools:text="8.7" />
 
                     </LinearLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:layout_marginHorizontal="@dimen/margin16dp"
                         android:text="@{viewModel.movieDetails.toData().title}"
                         android:textColor="@color/primary_text_color"
                         android:textSize="@dimen/text28sp"
@@ -117,7 +106,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:layout_marginHorizontal="@dimen/margin16dp"
                         android:layout_marginTop="@dimen/margin4dp"
                         android:text="@{viewModel.movieDetails.toData().releaseDate + ` . ` + viewModel.movieDetails.toData().status +` . ( `+viewModel.movieDetails.toData().originalLanguage+` )`}"
                         android:textAllCaps="true"
@@ -128,19 +117,21 @@
                     <com.google.android.material.chip.ChipGroup
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:theListForChips="@{viewModel.movieDetails.toData().genres}"
                         android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:checked="false"
                         android:layout_marginTop="@dimen/margin8dp"
-                        android:orientation="horizontal"/>
+                        android:checked="false"
+                        android:orientation="horizontal"
+                        app:theListForChips="@{viewModel.movieDetails.toData().genres}" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin24dp"
                         android:layout_marginTop="@dimen/margin16dp"
-                        android:background="@color/background_color"
+                        android:backgroundTint="@color/cards_color"
+                        android:background="@drawable/shape_season"
                         android:padding="@dimen/margin24dp"
+                        app:isNotNull="@{viewModel.movieDetails.toData().overview}"
                         app:cardCornerRadius="@dimen/radius16"
                         app:cardElevation="4dp">
 
@@ -158,13 +149,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/padding24dp"
+                        android:layout_marginHorizontal="@dimen/margin16dp"
                         android:layout_marginTop="@dimen/padding16dp"
                         android:text="@string/cast"
-                        app:isNotNull="@{viewModel.credits.toData().cast[0]}"
                         android:textColor="@color/primary_text_color"
                         android:textSize="@dimen/text20sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        app:isNotNull="@{viewModel.credits.toData().cast[0]}" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_cast"
@@ -173,7 +164,7 @@
                         android:layout_marginTop="16dp"
                         android:clipToPadding="false"
                         android:orientation="horizontal"
-                        android:paddingHorizontal="@dimen/padding28dp"
+                        android:paddingHorizontal="@dimen/padding24dp"
                         app:items="@{viewModel.credits.toData().cast}"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -184,9 +175,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:layout_marginHorizontal="@dimen/margin16dp"
                         android:layout_marginTop="@dimen/padding24dp"
                         android:text="@string/similar_movie"
+                        app:isNotNull="@{viewModel.similarMovies.toData().movies}"
                         android:textColor="@color/primary_text_color"
                         android:textSize="@dimen/text20sp"
                         android:textStyle="bold" />
@@ -198,7 +190,7 @@
                         android:layout_marginTop="16dp"
                         android:clipToPadding="false"
                         android:orientation="horizontal"
-                        android:paddingHorizontal="@dimen/padding28dp"
+                        android:paddingHorizontal="@dimen/padding24dp"
                         app:items="@{viewModel.similarMovies.toData().movies}"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         app:showWhenSuccess="@{viewModel.similarMovies}"
@@ -206,9 +198,21 @@
 
                 </LinearLayout>
 
-                </ScrollView>
+            </ScrollView>
 
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        <ImageView
+            android:id="@+id/go_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="@dimen/margin2x"
+            android:background="@drawable/shape_arrow"
+            android:elevation="2dp"
+            android:padding="@dimen/padding8dp"
+            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
