--- a/app/src/main/res/layout/fragment_details_tv.xml
+++ b/app/src/main/res/layout/fragment_details_tv.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.detailsTv.DetailsTvViewModel" />
@@ -15,18 +14,17 @@
         android:layout_height="match_parent"
         android:background="@color/background_color">
 
-        <com.google.android.material.imageview.ShapeableImageView
+        <ImageView
             android:id="@+id/go_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_margin="@dimen/margin2x"
+            android:padding="@dimen/padding8dp"
             android:background="@drawable/shape_arrow"
-            android:padding="6dp"
-            android:elevation="1dp"
+            android:elevation="2dp"
             android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading"
@@ -106,7 +104,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin24dp"
+                    android:layout_marginStart="@dimen/margin24dp"
+                    android:layout_marginEnd="@dimen/margin32dp"
                     android:text="@{viewModel.tvDetails.toData().name}"
                     android:textColor="@color/primary_text_color"
                     android:textSize="@dimen/text28sp"
@@ -138,7 +137,7 @@
                     style="@style/TabLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin16dp"
+                    android:layout_marginHorizontal="@dimen/margin24dp"
                     android:layout_marginTop="@dimen/margin14dp"
                     android:background="@color/background_color"
                     android:lineSpacingExtra="@dimen/margin16dp" />
@@ -163,7 +162,6 @@
             </LinearLayout>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
