--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/background_color">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading"
@@ -44,7 +45,6 @@
             app:lottie_rawRes="@raw/no_connection"
             app:showWhenError="@{viewModel.movieSearchResult}" />
 
-
         <ImageView
             android:id="@+id/clear_text_image"
             android:layout_width="wrap_content"
@@ -60,13 +60,17 @@
             app:tint="@color/secondary_text_color"
             tools:ignore="ContentDescription" />
 
-
         <EditText
             android:id="@+id/search_bar"
             style="@style/SearchBar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="@dimen/margin8dp"
+            android:layout_marginTop="@dimen/margin8dp"
+            android:layout_marginHorizontal="@dimen/margin16dp"
+            android:drawableStart="@drawable/ic_baseline_search_24"
+            android:drawableTint="@color/secondary_text_color"
+            android:textColorHint="@color/secondary_text_color"
+            android:background="@drawable/shape_season"
             android:afterTextChanged="@{()->viewModel.searchForMovie()}"
             android:inputType="text"
             android:paddingLeft="@dimen/margin16dp"
@@ -99,7 +103,6 @@
             app:items="@{viewModel.movieSearchResult.toData().results}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-
             app:layout_constraintTop_toBottomOf="@+id/break_line"
             tools:listitem="@layout/item_search" />
 
