--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="item"
             type="com.watermelon.moviesapp.model.response.movie.Movie" />
@@ -12,7 +11,6 @@
         <variable
             name="listener"
             type="com.watermelon.moviesapp.ui.home.HomeInteractionListener" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,13 +18,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:onClick="@{()->listener.onItemClicked(item.id)}"
-
         >
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/popular_image"
-            android:layout_width="130dp"
-            android:layout_height="170dp"
+            android:layout_width="120dp"
+            android:layout_height="145dp"
             android:scaleType="fitXY"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
             android:contentDescription="@string/movie_image"
@@ -43,7 +40,7 @@
             android:layout_marginTop="@dimen/margin1x"
             android:layout_marginStart="@dimen/margin1x"
             android:layout_marginEnd="@dimen/margin1x"
-            android:textColor="@color/black"
+            android:textColor="@color/primary_text_color"
             android:textStyle="bold"
             android:textSize="@dimen/text12sp"
             android:singleLine="true"
@@ -73,7 +70,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:alpha=".8"
-            android:textColor="@color/black"
+            android:textColor="@color/primary_text_color"
             android:gravity="start"
             android:text="@{item.voteCount.toString()}"
             android:textSize="@dimen/text12sp"
@@ -83,6 +80,7 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
             tools:text="2344" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
