--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -6,7 +6,6 @@
         android:title="@string/home"
         android:checked="true"
         android:color="@color/base_color"/>
-
     <item
         android:id="@+id/searchFragment"
         android:icon="@drawable/ic_baseline_search_24"
@@ -25,7 +24,7 @@
         android:color="@color/base_color"/>
     <item
         android:id="@+id/categoriesFragment"
-        android:icon="@drawable/ic_menu"
+        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
         android:title="@string/categories"
         android:color="@color/base_color"/>
 </menu>
