fix: change interaction listener in about movie and tv show

--- a/app/src/main/res/layout/item_tv_credits_actor.xml
+++ b/app/src/main/res/layout/item_tv_credits_actor.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.home.HomeInteractionListener" />
+            type="com.watermelon.moviesapp.ui.profile.ProfileInteractionListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
